--- a/Dashboard/Areas/SeasonEntity/Views/Season/CreateOrEdit.cshtml
+++ b/Dashboard/Areas/SeasonEntity/Views/Season/CreateOrEdit.cshtml
@@ -246,7 +246,7 @@
                                                             <div class="col-md-3 col-12">
                                                                 <div class="mb-1">
                                                                     <label class="form-label">@Localizer.Get("Deadline")</label>
-                                                                    <input type="datetime" name=".Deadline" class="form-control flatpickr-date-time" placeholder="@Localizer.Get("Enter") @Localizer.Get("Deadline")" value="@DateTime.Now">
+                                                                    <input type="datetime" name=".Deadline" class="form-control flatpickr-date-time" placeholder="@Localizer.Get("Enter") @Localizer.Get("Deadline")" value="@DateTime.UtcNow">
                                                                 </div>
                                                             </div>
 
