--- a/Site/Views/Shared/_Layout.cshtml
+++ b/Site/Views/Shared/_Layout.cshtml
@@ -39,17 +39,17 @@
                         <div class="row button-group store-buttons">
                             <div id="apple" class="col p-2">
                                 <a href="https://apps.apple.com/eg/app/id6444708450">
-                                    <img src="~/download-assets/img/icon/app-store-black.png" alt="">
+                                    <img src="~/download-assets/img/icon/app-store-black.png" alt="Apple">
                                 </a>
                             </div>
                             <div id="google" class="col p-2">
                                 <a href="https://play.google.com/store/apps/details?id=com.dinnova.fem">
-                                    <img src="~/download-assets/img/icon/google-play-black.png" alt="">
+                                    <img src="~/download-assets/img/icon/google-play-black.png" alt="Google">
                                 </a>
                             </div>
                             <div id="huawei" class="col p-2">
                                 <a href="https://appgallery.huawei.com/app/C107418829">
-                                    <img src="~/download-assets/img/icon/app-gallery-black.png" alt="">
+                                    <img src="~/download-assets/img/icon/app-gallery-black.png" alt="Huawei">
                                 </a>
                             </div>
                         </div>
