--- a/Dashboard/Areas/PlayerMarkEntity/Views/PlayerMark/CreateOrEdit.cshtml
+++ b/Dashboard/Areas/PlayerMarkEntity/Views/PlayerMark/CreateOrEdit.cshtml
@@ -77,6 +77,7 @@
                                             <div class="mb-1">
                                                 <label asp-for="Percent" class="form-label"></label>
                                                 <select asp-for="Percent" class="select2 form-select">
+                                                    <option value="0">0%</option>
                                                     <option value="25">25%</option>
                                                     <option value="50">50%</option>
                                                     <option value="75">75%</option>
